@@ -1,3 +1,9 @@
+2007-02-20  Akim Demaille  <demaille@gostai.com>
+
+	Count xpasses
+	* check.mk (failures): Count fails and xpasses.
+	Use it.
+
 2007-02-19  Akim Demaille  <akim.demaille@free.fr>
 
 	svn-externals: svn up -N
